--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>eBusiness Bootstrap Template - Index</title>
+  <title>Noclegi Wolski</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -42,17 +42,17 @@
     <div class="container d-flex justify-content-between">
 
       <div class="logo">
-        <h1><a href="index.html"><span>e</span>Business</a></h1>
+        <h1><a href="index.html"><span>Noclegi</span>Wolski</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
+          <li><a class="nav-link scrollto active" href="#hero">Strona Główna</a></li>
+          <li><a class="nav-link scrollto" href="#about">O nas</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
+          <li><a class="nav-link scrollto" href="#portfolio">Galeria</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
@@ -72,7 +72,7 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li><a class="nav-link scrollto" href="#contact">Kontact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -89,32 +89,32 @@
 
         <div class="carousel-inner" role="listbox">
 
-          <div class="carousel-item active" style="background-image: url(assets/img/hero-carousel/1.jpg)">
+          <div class="carousel-item active" style="background-image: url(assets/img/hero-carousel/4.jpg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">The Best Business Information </h2>
-                <p class="animate__animated animate__fadeInUp">We're In The Business Of Helping You Start Your Business</p>
-                <a href="#about" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
+                <h2 class="animate__animated animate__fadeInDown">Pokoje Gościnne Krzysztof Wolski </h2>
+                <p class="animate__animated animate__fadeInUp">Pokoje w sercu Pienin</p>
+                <a href="#about" class="btn-get-started scrollto animate__animated animate__fadeInUp">Zarezerwuj pokój</a>
               </div>
             </div>
           </div>
 
-          <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/2.jpg)">
+          <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/5.jpg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">At vero eos et accusamus</h2>
-                <p class="animate__animated animate__fadeInUp">Helping Business Security & Peace of Mind for Your Family</p>
-                <a href="#about" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
+                <h2 class="animate__animated animate__fadeInDown">Nie wiem co tu napisać</h2>
+                <p class="animate__animated animate__fadeInUp">i tutaj tez nie</p>
+                <a href="#about" class="btn-get-started scrollto animate__animated animate__fadeInUp">Zarezerwuj pokój</a>
               </div>
             </div>
           </div>
 
-          <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/3.jpg)">
+          <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/6.jpg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">Temporibus autem quibusdam</h2>
-                <p class="animate__animated animate__fadeInUp">Beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem</p>
-                <a href="#about" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
+                <h2 class="animate__animated animate__fadeInDown">a tutaj to już napewno nic nie wymyślę</h2>
+                <p class="animate__animated animate__fadeInUp">może skopiuje napis z pierwszdgo zdjęcia</p>
+                <a href="#about" class="btn-get-started scrollto animate__animated animate__fadeInUp">Zarezerwuj pokój</a>
               </div>
             </div>
           </div>
@@ -141,7 +141,7 @@
         <div class="row">
           <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="section-headline text-center">
-              <h2>About eBusiness</h2>
+              <h2>O nas</h2>
             </div>
           </div>
         </div>
@@ -151,7 +151,7 @@
             <div class="well-left">
               <div class="single-well">
                 <a href="#">
-                  <img src="assets/img/about/1.jpg" alt="">
+                  <img src="assets/img/about/3.jpg" alt="">
                 </a>
               </div>
             </div>
@@ -161,26 +161,37 @@
             <div class="well-middle">
               <div class="single-well">
                 <a href="#">
-                  <h4 class="sec-head">project Maintenance</h4>
+                  <h4 class="sec-head">Zapraszamy!</h4>
                 </a>
                 <p>
-                  Redug Lagre dolor sit amet, consectetur adipisicing elit. Itaque quas officiis iure aspernatur sit adipisci quaerat unde at nequeRedug Lagre dolor sit amet, consectetur adipisicing elit. Itaque quas officiis iure
+                  Zapraszamy do spędzenia wolnego czasu w uroczym i cichym zakątku
+                  Krościenka.
+                  Nasz domek posiada pokoiki dwuosobowe oraz trzyosobowe z możliwością
+                  dostawki.
+                  Każdy z pokoi posiada łazienkę, lodówkę, odbiornik radiowo-telewizyjny
+                  oraz czajnik bezprzewodowy.
+                  Umożliwiamy korzystanie z kuchni do przygotowywania ciepłych posiłków.
+                  Oferujemy miejsce parkingowe oraz duże podwórko z altanką i miejscem na
+                  grilla.
+                  Spragnionych zachęcamy do korzystania z pobliskich (300m) źródeł wód
+                  mineralnych.
+                  Jest to idealne miejsce do spędzenia czasu z całą rodzinką.
                 </p>
                 <ul>
                   <li>
-                    <i class="bi bi-check"></i> Interior design Package
+                    <i class="bi bi-check"></i> osobna łazienka dla każdego pokoju
                   </li>
                   <li>
-                    <i class="bi bi-check"></i> Building House
+                    <i class="bi bi-check"></i> mała lodówka w każdym pokoju
                   </li>
                   <li>
-                    <i class="bi bi-check"></i> Reparing of Residentail Roof
+                    <i class="bi bi-check"></i> telewizor
                   </li>
                   <li>
-                    <i class="bi bi-check"></i> Renovaion of Commercial Office
+                    <i class="bi bi-check"></i> altanka z miejscem na grilla
                   </li>
                   <li>
-                    <i class="bi bi-check"></i> Make Quality Products
+                    <i class="bi bi-check"></i> dostęp do kuchni
                   </li>
                 </ul>
               </div>
@@ -309,158 +320,11 @@
       </div>
     </div><!-- End Services Section -->
 
-    <!-- ======= Team Section ======= -->
-    <div id="team" class="our-team-area area-padding">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 col-sm-12 col-xs-12">
-            <div class="section-headline text-center">
-              <h2>Our special Team</h2>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-3 col-sm-3 col-xs-12">
-            <div class="single-team-member">
-              <div class="team-img">
-                <a href="#">
-                  <img src="assets/img/team/1.jpg" alt="">
-                </a>
-                <div class="team-social-icon text-center">
-                  <ul>
-                    <li>
-                      <a href="#">
-                        <i class="bi bi-facebook"></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <i class="bi bi-twitter"></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <i class="bi bi-instagram"></i>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-              <div class="team-content text-center">
-                <h4>Jhon Mickel</h4>
-                <p>Seo</p>
-              </div>
-            </div>
-          </div>
-          <!-- End column -->
-          <div class="col-md-3 col-sm-3 col-xs-12">
-            <div class="single-team-member">
-              <div class="team-img">
-                <a href="#">
-                  <img src="assets/img/team/2.jpg" alt="">
-                </a>
-                <div class="team-social-icon text-center">
-                  <ul>
-                    <li>
-                      <a href="#">
-                        <i class="bi bi-facebook"></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <i class="bi bi-twitter"></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <i class="bi bi-instagram"></i>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-              <div class="team-content text-center">
-                <h4>Andrew Arnold</h4>
-                <p>Web Developer</p>
-              </div>
-            </div>
-          </div>
-          <!-- End column -->
-          <div class="col-md-3 col-sm-3 col-xs-12">
-            <div class="single-team-member">
-              <div class="team-img">
-                <a href="#">
-                  <img src="assets/img/team/3.jpg" alt="">
-                </a>
-                <div class="team-social-icon text-center">
-                  <ul>
-                    <li>
-                      <a href="#">
-                        <i class="bi bi-facebook"></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <i class="bi bi-twitter"></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <i class="bi bi-instagram"></i>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-              <div class="team-content text-center">
-                <h4>Lellien Linda</h4>
-                <p>Web Design</p>
-              </div>
-            </div>
-          </div>
-          <!-- End column -->
-          <div class="col-md-3 col-sm-3 col-xs-12">
-            <div class="single-team-member">
-              <div class="team-img">
-                <a href="#">
-                  <img src="assets/img/team/4.jpg" alt="">
-                </a>
-                <div class="team-social-icon text-center">
-                  <ul>
-                    <li>
-                      <a href="#">
-                        <i class="bi bi-facebook"></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <i class="bi bi-twitter"></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <i class="bi bi-instagram"></i>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-              <div class="team-content text-center">
-                <h4>Jhon Powel</h4>
-                <p>Seo Expert</p>
-              </div>
-            </div>
-          </div>
-          <!-- End column -->
-        </div>
-      </div>
-    </div><!-- End Team Section -->
-
     <!-- ======= Rviews Section ======= -->
     <div class="reviews-area">
       <div class="row g-0">
         <div class="col-lg-6">
-          <img src="assets/img/about/2.jpg" alt="" class="img-fluid">
+          <img src="assets/img/about/4.jpg" alt="" class="img-fluid">
         </div>
         <div class="col-lg-6 work-right-text d-flex align-items-center">
           <div class="px-5 py-5 py-lg-0">
@@ -478,7 +342,7 @@
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="section-headline text-center">
-              <h2>Our Portfolio</h2>
+              <h2>Galeria</h2>
             </div>
           </div>
         </div>
@@ -886,7 +750,7 @@
           <div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12">
               <div class="section-headline text-center">
-                <h2>Contact us</h2>
+                <h2>Kontakt</h2>
               </div>
             </div>
           </div>
@@ -897,8 +761,8 @@
                 <div class="single-icon">
                   <i class="bi bi-phone"></i>
                   <p>
-                    Call: +1 5589 55488 55<br>
-                    <span>Monday-Friday (9am-5pm)</span>
+                    Tel: +48 500 147 516<br>
+                    <span>Codziennnie (od 8 do 21)</span>
                   </p>
                 </div>
               </div>
@@ -909,7 +773,7 @@
                 <div class="single-icon">
                   <i class="bi bi-envelope"></i>
                   <p>
-                    Email: info@example.com<br>
+                    Email: wolskikrzysztof2000@gmail.com<br>
                     <span>Web: www.example.com</span>
                   </p>
                 </div>
@@ -921,8 +785,8 @@
                 <div class="single-icon">
                   <i class="bi bi-geo-alt"></i>
                   <p>
-                    Location: A108 Adam Street<br>
-                    <span>NY 535022, USA</span>
+                    Lokalizacja: Jarek 22<br>
+                    <span>Krościenko nad Dunajcem, małopolska</span>
                   </p>
                 </div>
               </div>
