--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
   <title>Noclegi Wolski</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Pokoje gościnne Krzysztof Wolski" name="description">
+  <meta content="pokoje, pokoje krościenko, nocleg krościenko, krościenko nad dunajcem," name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -190,9 +191,9 @@
         </div>
         <div class="col-lg-6 work-right-text d-flex align-items-center">
           <div class="px-5 py-5 py-lg-0">
-            <h2>working with us</h2>
-            <h5>Web Design, Ready Home, Construction and Co-operate Outstanding Buildings.</h5>
-            <a href="#contact" class="ready-btn scrollto">Contact us</a>
+            <h2>Zarezerwuj nocleg już dzisiaj!</h2>
+            <h5>Pokoje przy źródle wody mineralnej, przy lesie.</h5>
+            <a href="#contact" class="ready-btn scrollto">Rezerwacja</a>
           </div>
         </div>
       </div>
@@ -366,7 +367,6 @@
                   <i class="bi bi-envelope"></i>
                   <p>
                     Email: wolskikrzysztof2000@gmail.com<br>
-                    <span>Web: www.example.com</span>
                   </p>
                 </div>
               </div>
@@ -389,36 +389,11 @@
             <!-- Start Google Map -->
             <div class="col-md-6">
               <!-- Start Map -->
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22864.11283411948!2d-73.96468908098944!3d40.630720240038435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sbg!4v1540447494452" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
-              <!-- End Map -->
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4757.088462106321!2d20.436523107761698!3d49.45010646833033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473e06b483a64b15%3A0x796a824e9652f471!2sPokoje%20Goscinne%20Krzysztof%20Wolski!5e0!3m2!1spl!2spl!4v1659106154572!5m2!1spl!2spl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>              <!-- End Map -->
             </div>
             <!-- End Google Map -->
 
-            <!-- Start  contact -->
-            <div class="col-md-6">
-              <div class="form contact-form">
-                <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-                  <div class="form-group">
-                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                  </div>
-                  <div class="form-group mt-3">
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                  </div>
-                  <div class="form-group mt-3">
-                    <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-                  </div>
-                  <div class="form-group mt-3">
-                    <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-                  </div>
-                  <div class="my-3">
-                    <div class="loading">Loading</div>
-                    <div class="error-message"></div>
-                    <div class="sent-message">Your message has been sent. Thank you!</div>
-                  </div>
-                  <div class="text-center"><button type="submit">Send Message</button></div>
-                </form>
-              </div>
-            </div>
+            
             <!-- End Left contact -->
           </div>
         </div>
